added a bunch of manuevers

--- a/src/components/skill_template.css
+++ b/src/components/skill_template.css
@@ -67,6 +67,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
+  width: 100%;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .hr-divider {
