--- a/src/components/skill_template.css
+++ b/src/components/skill_template.css
@@ -56,7 +56,7 @@
 }
 
 .skill-box-title {
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   margin-top: 0;
   margin-bottom: 10px;
   text-align: center;
@@ -71,6 +71,7 @@
   width: 100%;
   overflow-wrap: break-word;
   word-wrap: break-word;
+  font-size: 1.2rem;
 }
 
 .hr-divider {
@@ -88,6 +89,12 @@
   margin-top: 40px;
 }
 
+.skill-circle-link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
+
 .skill-circle {
   width: 120px;
   height: 120px;
@@ -99,6 +106,14 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  transition: all 0.3s ease;
+}
+
+.skill-circle-image {
+  max-width: 80%;
+  max-height: 80%;
+  border-radius: 50%;
+  object-fit: contain;
 }
 
 .skill-circle::before {
@@ -110,7 +125,7 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.skill-circle:hover {
+.skill-circle:hover, .skill-circle-link:hover .skill-circle {
   transform: scale(1.1);
   background-color: rgba(255, 255, 255, 0.25);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3), inset 0 0 30px rgba(255, 255, 255, 0.15);
